# llvm_demo

./: .gitignore  CMakeLists.txt  gramtree.l  gramtree.y  llvm_demo  main.c
.cache/clangd/index/: Ast.h.972FDEB9D69C1FA0.idx  instruction.h.A7443C88AA52BD19.idx  type.h.2053C30E54962E1C.idx
container/include/: cds.h
container/include/container/: list.h
container/src/: list.c
include/: Ast.h  Pass.h  bblock.h  c_container_auxiliary.h  function.h  instruction.h  optimization.h  symbol_table.h  type.h  use.h  user.h  value.h
my_cases/: logical_or.c  mix_features.c  number.c  while_cases.c
output/: analyse.txt  out.txt  output.bak.txt  printf_ast.txt
src/: Ast.c  Pass.c  backend.c  bblock.c  c_container_auxiliary.c  function.c  instruction.c  optimization.c  symbol_table.c  type.c  use.c  user.c  value.c
test_cases/: 04_arr_defn3.c  09_func_defn.c  11_add2.c  21_if_test2.c  24_if_test5.c  44_stmt_expr.c  51_short_circuit3.c  53_scope2.c  62_percolation.c  65_color.c  71_full_conn.c  72_hanoi.c  73_int_io.c  75_max_flow.c  77_substr.c  80_chaos_token.c  82_long_func.c  86_long_code2.c  87_many_params.c  rename.sh
